@@ -44,15 +44,3 @@ QString NSurfaceMatchingItem::text(int column) const {
         return ans.stringValue().c_str();
 }
 
-void NSurfaceMatchingItem::paintCell(QPainter* p, const QColorGroup& cg,
-        int column, int width, int align) {
-    // Do the standard painting.
-    KListViewItem::paintCell(p, cg, column, width, align);
-
-    // Draw a box around the cell.
-    p->setPen((QRgb)listView()->style().styleHint(
-        QStyle::SH_Table_GridLineColor, listView()));
-    p->drawLine(0, height() - 1, width - 1, height() - 1);
-    p->lineTo(width - 1, 0);
-}
-
